--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,17 +1,20 @@
 <div class="container contact">
-    <form>
+    <div *ngIf="success" class="alert alert-success" role="alert">
+        Submitted
+      </div>
+    <form [formGroup]="messageForm">
         <div class="form-group">
             <label for="fullname">Full Name</label>
-            <input type="text" class="form-control" id="fullname" placeholder="e.g Shubham Tiwari">
+            <input type="text" formControlName="fullname" class="form-control" id="fullname" placeholder="e.g Shubham Tiwari">
           </div>
         <div class="form-group">
           <label for="email">Email address</label>
-          <input type="email" class="form-control" id="email" placeholder="name@example.com">
+          <input type="email" formControlName="email" class="form-control" id="email" placeholder="name@example.com">
         </div>
         <div class="form-group">
           <label for="message">Message</label>
-          <textarea class="form-control" id="message" rows="3"></textarea>
+          <textarea class="form-control" formControlName="message" id="message" rows="3"></textarea>
         </div>
-        <button type="submit" class="btn btn-dark">Submit</button>
+        <button type="submit" (click)="onSubmit()" class="btn btn-dark">Submit</button>
       </form>
 </div>
