--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -29,7 +29,10 @@
                 <div class="form-group">
                     <input type="text" formControlName="tag" class="form-control" id="tag" placeholder="Add tags seperated by comma">
                 </div>
-                <div id="editor" formControlName="content" [froalaEditor]></div>
+                <div class="form-group">
+                    <textarea formControlName="content" class="form-control" id="content" placeholder="Write post..." rows="5"></textarea>
+                </div>
+                <!-- <div id="editor" formControlName="content" [froalaEditor]></div> -->
             </form>
             
         </div>
