added discord url

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,6 +14,8 @@
             <a href="https://linkedin.com/in/itiwarishubham" target="_blank"><i class="fab fa-linkedin-in socials"></i></a>
 
             <a href="https://github.com/itiwarishubham/" target="_blank"><i class="fab fa-github socials"></i></a>
+
+            <a href="https://discord.gg/U86CUJCs" target="_blank"><i class="fab fa-discord socials"></i></a>
           </div>
 
       </div>
