--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,6 +20,9 @@
                     <a routerLink="/dsa" routerLinkActive="active" ariaCurrentWhenActive="page" class="nav-link" href="#">DSA Problems</a>
                 </li>
                 <li class="nav-item">
+                    <a routerLink="/wordle" routerLinkActive="active" ariaCurrentWhenActive="page" class="nav-link" href="#">Wordle</a>
+                </li>
+                <li class="nav-item">
                     <a routerLink="/courses" routerLinkActive="active" ariaCurrentWhenActive="page" class="nav-link" href="#">Courses</a>
                 </li>
                 <li class="nav-item">
