--- a/src/app/wordle/wordle.component.html
+++ b/src/app/wordle/wordle.component.html
@@ -8,8 +8,8 @@
             <li>The player must guess the secret word by entering a 5-letter word.</li>
             <li>After each guess, the game provides feedback on how many letters are correct:
               <ul>
-                <li>A letter in white indicates that it is in the correct position in the secret word.</li>
-                <li>A letter in black indicates that it is in the secret word, but in a different position.</li>
+                <li>A letter in green indicates that it is in the correct position in the secret word.</li>
+                <li>A letter in orange indicates that it is in the secret word, but in a different position.</li>
                 <li>A letter in gray indicates that it is not in the secret word at all.</li>
                 <li>A letter in red indicates that it is not a valid word.</li>
               </ul>
@@ -28,38 +28,38 @@
     <div class="keypad-container">
         <div class="keypad">
             <div class="row">
-                <div class="key" id="q">Q</div>
-                <div class="key" id="w">W</div>
-                <div class="key" id="e">E</div>
-                <div class="key" id="r">R</div>
-                <div class="key" id="t">T</div>
-                <div class="key" id="y">Y</div>
-                <div class="key" id="u">U</div>
-                <div class="key" id="i">I</div>
-                <div class="key" id="o">O</div>
-                <div class="key" id="p">P</div>
-                <div class="key backspace" id="backspace">&#9003;</div>
+                <button class="key" (click) = "onClick($event)" value="Q" id="q">Q</button>
+                <button class="key" (click) = "onClick($event)" value="W" id="w">W</button>
+                <button class="key" (click) = "onClick($event)" value="E" id="e">E</button>
+                <button class="key" (click) = "onClick($event)" value="R" id="r">R</button>
+                <button class="key" (click) = "onClick($event)" value="T" id="t">T</button>
+                <button class="key" (click) = "onClick($event)" value="Y" id="y">Y</button>
+                <button class="key" (click) = "onClick($event)" value="U" id="u">U</button>
+                <button class="key" (click) = "onClick($event)" value="I" id="i">I</button>
+                <button class="key" (click) = "onClick($event)" value="O" id="o">O</button>
+                <button class="key" (click) = "onClick($event)" value="P" id="p">P</button>
+                <button class="key backspace" (click) = "onClick($event)" value="backspace" id="backspace">&#9003;</button>
             </div>
             <div class="row">
-                <div class="key" id="a">A</div>
-                <div class="key" id="s">S</div>
-                <div class="key" id="d">D</div>
-                <div class="key" id="f">F</div>
-                <div class="key" id="g">G</div>
-                <div class="key" id="h">H</div>
-                <div class="key" id="j">J</div>
-                <div class="key" id="k">K</div>
-                <div class="key" id="l">L</div>
-                <div class="key enter" id="enter">&#9166;</div>
+                <button class="key" (click) = "onClick($event)" value="A" id="a">A</button>
+                <button class="key" (click) = "onClick($event)" value="S" id="s">S</button>
+                <button class="key" (click) = "onClick($event)" value="D" id="d">D</button>
+                <button class="key" (click) = "onClick($event)" value="F" id="f">F</button>
+                <button class="key" (click) = "onClick($event)" value="G" id="g">G</button>
+                <button class="key" (click) = "onClick($event)" value="H" id="h">H</button>
+                <button class="key" (click) = "onClick($event)" value="J" id="j">J</button>
+                <button class="key" (click) = "onClick($event)" value="K" id="k">K</button>
+                <button class="key" (click) = "onClick($event)" value="L" id="l">L</button>
+                <button class="key enter" (click) = "onClick($event)" value="enter" id="enter">&#9166;</button>
             </div>
             <div class="row">
-                <div class="key" id="z">Z</div>
-                <div class="key" id="x">X</div>
-                <div class="key" id="c">C</div>
-                <div class="key" id="v">V</div>
-                <div class="key" id="b">B</div>
-                <div class="key" id="n">N</div>
-                <div class="key" id="m">M</div>
+                <button class="key" (click) = "onClick($event)" value="Z" id="z">Z</button>
+                <button class="key" (click) = "onClick($event)" value="X" id="x">X</button>
+                <button class="key" (click) = "onClick($event)" value="C" id="c">C</button>
+                <button class="key" (click) = "onClick($event)" value="V" id="v">V</button>
+                <button class="key" (click) = "onClick($event)" value="B" id="b">B</button>
+                <button class="key" (click) = "onClick($event)" value="N" id="n">N</button>
+                <button class="key" (click) = "onClick($event)" value="M" id="m">M</button>
             </div>
         </div>
     </div>
