--- a/src/app/wordle/wordle.component.scss
+++ b/src/app/wordle/wordle.component.scss
@@ -177,11 +177,8 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   margin-right: 5px;
+  background-color: #76BA99;
   cursor: pointer;
-}
-
-.key:hover {
-  background-color: #ccc;
 }
 
 .backspace {
@@ -205,8 +202,8 @@ h1{
 
 @media screen and (max-width: 480px) {
     .key {
-      width: 40px;
-      height: 40px;
+      width: 23px;
+      height: 30px;
       font-size: 20px;
     }
   }
