--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~animate.css/animate.min.css';
 @font-face {
     font-family: myFont;
     src: url("/assets/fonts/TitilliumWeb-Black.ttf") format("truetype");
