--- a/src/app/wordle/wordle.component.scss
+++ b/src/app/wordle/wordle.component.scss
@@ -234,3 +234,9 @@ h1{
   #modalButton{
     margin-bottom: 20px;
   }
+
+  .defination{
+    border: 2px solid black;
+    width: 100%;
+    padding: 5px;
+  }
