--- a/src/app/wordle/wordle.component.scss
+++ b/src/app/wordle/wordle.component.scss
@@ -235,9 +235,13 @@ h1{
     margin-bottom: 20px;
   }
 
-  .defination{
+  .definition{
     border: 2px solid black;
     width: 100%;
     padding: 5px;
     font-family: myFont;
+  }
+
+  #sound-toggle{
+    padding-bottom: 25px;
   }
