--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -31,6 +31,9 @@
                 <li class="nav-item">
                     <a routerLink="/contact" routerLinkActive="active" ariaCurrentWhenActive="page" class="nav-link" href="#">Contact</a>
                 </li>
+                <li class="nav-item">
+                    <a routerLink="/percent-matters" routerLinkActive="active" ariaCurrentWhenActive="page" class="nav-link" (click)="redirect()" href="#">Percent Matter</a>
+                </li>
             </ul>
         </div>
         <div *ngIf="!authService.isLoggedIn" class="text-right"><button class="" (click)="authService.GoogleAuth()">Signin with Google</button></div>
