--- a/src/app/wordle/wordle.component.scss
+++ b/src/app/wordle/wordle.component.scss
@@ -245,3 +245,9 @@ h1{
   #sound-toggle{
     padding-bottom: 25px;
   }
+  
+  .score{
+    font-family: myFont;
+    margin-bottom: 20px;
+    padding-left: 10px;
+  }
