--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,7 @@
 
             <a href="https://github.com/itiwarishubham/" target="_blank"><i class="fab fa-github socials"></i></a>
 
-            <a href="https://discord.gg/U86CUJCs" target="_blank"><i class="fab fa-discord socials"></i></a>
+            <a href="https://discord.gg/PpXThcuC" target="_blank"><i class="fab fa-discord socials"></i></a>
           </div>
 
       </div>
